Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         <div class="container">
             <div class="logo">
                 <i class="fas fa-store"></i>
-                TiendaPro
+                MarvyShopmarket
             </div>
         </div>
     </header>
@@ -504,4 +504,5 @@
     </script>
 
 </body>
+
 </html>
